--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -8,7 +8,7 @@
 <li><a href="/ui/update-acls">Update ACLs</a></li>
 <li><a href="/ui/view-acl-update-log">View ACL update log</a></li>
 <li><a href="/ui/view-acls">View ACLs</a></li>
-<li><a href="/ui/view-access-check-log">View access log</a></li>
+<li><a href="/ui/view-access-logs">View access logs</a></li>
 <li><a href="/ui/view-http-log">View HTTP log</a></li>
 </ul>
 </body>
